# hisi_monitor

./: .gitignore  3rdparty.cmake  CMakeLists.txt  LICENSE  README.md  autobuild
conf/: config.json
monitor/: CMakeLists.txt  global.h  main.cpp
monitor/base/: ref_counted_object.h  ref_counter.h
monitor/common/: CMakeLists.txt  buffer.h  config.cpp  config.h  res_code.h  server_sock.cpp  server_sock.h  sock_handler.h  sock_helper.h  system.cpp  system.h  utils.h
monitor/live/: CMakeLists.txt  live.h  rtmp.cpp  rtmp.h  rtmp_streamer.cpp  rtmp_streamer.h  rtmp_streamer2.cpp  rtmp_streamer2.h  streamer.h
monitor/record/: CMakeLists.txt  mp4_muxer.cpp  mp4_muxer.h  mp4_muxer2.cpp  mp4_muxer2.h  mp4_record.cpp  mp4_record.h  record.h
monitor/video/: video_frame.h  video_rotation.h  video_sink_interface.h
monitor/video_capture/: CMakeLists.txt  video_capture.h  video_capture_capability.h  video_capture_impl.cpp  video_capture_impl.h
monitor/video_codec/: CMakeLists.txt  video_codec.h  video_codec_define.h  video_codec_impl.cpp  video_codec_impl.h
monitor/video_detect/: CMakeLists.txt  video_detect.h  video_detect_impl.cpp  video_detect_impl.h
monitor/video_process/: CMakeLists.txt  osd.cpp  osd.h  video_process.h  video_process_impl.cpp  video_process_impl.h
